--- a/DemoFly/manifest.json
+++ b/DemoFly/manifest.json
@@ -11,10 +11,11 @@ An addition to it, you can also build demo for FREE ODOO Addons, placed on ODOO 
     "16": "./img/16x16.png",
       "32": "./img/32x32.png",
       "48": "./img/48x48.png",
+      "96": "./img/96x96.png",
       "128": "./img/128x128.png"
   },
   "browser_action": {
-    "default_icon": "./img/16x16.png",
+    "default_icon": "./img/32x32.png",
     "default_popup": "popup.html"
   },
   "permissions": [
